--- a/package.json
+++ b/package.json
@@ -23,5 +23,17 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "vue-template-compiler": "^2.6.14"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NickAstley/vue-dc-comics.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NickAstley/vue-dc-comics/issues"
+  },
+  "homepage": "https://github.com/NickAstley/vue-dc-comics#readme"
 }
